      the same as Subversion.  (Martin Pool)

    * New ftp transport support (on ftplib), for ftp:// and aftp:// 
      URLs.  (Daniel Silverstone)

    * Commit editor temporary files now start with 'bzr_log.', to allow 
      text editors to match the file name and set up appropriate modes or 
      settings.  (Magnus Therning)

  BUG FIXES:

    * SFTP can walk up to the root path without index errors. (Robert Collins)

    * Fix bugs in running bzr with 'python -O'.  (Martin Pool)

    * Error when run with -OO

    * Fix bug in reporting http errors that don't have an http error code.
      (Martin Pool)

    * Handle more cases of pipe errors in display commands

    * Change status to 3 for all errors

    * Files that are added and unlinked before committing are completely
      ignored by diff and status

    * Stores with some compressed texts and some uncompressed texts are now
      able to be used. (John A Meinel)

    * Fix for bzr pull failing sometimes under windows

    * Fix for sftp transport under windows when using interactive auth

    * Show files which are both renamed and modified as such in 'bzr 
      status' output.  (#4503, Daniel Silverstone)

    * Make annotate cope better with revisions committed without a valid 
      email address.  (Marien Zwart)

    * Fix representation of tab characters in commit messages.  (Harald 
      Meland)

    * List of plugin directories in BZR_PLUGIN_PATH environment variable is
      now parsed properly under Windows. (Alexander Belchenko)

    * Show number of revisions pushed/pulled/merged. (Robey Pointer)

  TESTING:

    * Fix selftest asking for passwords when there are no SFTP keys.  
      (Robey Pointer, Jelmer Vernooij) 

    * Fix selftest run with 'python -O'.  (Martin Pool)

    * Fix HTTP tests under Windows. (John Arbash Meinel)

    * Make tests work even if HOME is not set (Aaron Bentley)

    * Updated build_tree to use fixed line-endings for tests which read 